// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Send – TransactionAdvancedOptions render should render with data input if current token is not passed 1`] = `
<div class="field is-horizontal">
    <div class="field-label">
        <label class="label">Data</label>
    </div>
    <div class="field-body">
        <v-input id="data" name="data" validator="required|hex" aria-describedby="data" placeholder="Data" required="" data-test="transaction-data-input" v-model="form.data"></v-input>
    </div>
</div>
`;

exports[`Send – TransactionAdvancedOptions render should render without data input if current token is passed 1`] = `
<div class="field is-horizontal" style="display: none;">
    <div class="field-label">
        <label class="label">Data</label>
    </div>
    <div class="field-body">
        <v-input id="data" name="data" validator="required|hex" aria-describedby="data" placeholder="Data" required="" data-test="transaction-data-input" v-model="form.data"></v-input>
    </div>
</div>
`;
